fix breadcrumbs, add backup view page

--- a/src/main/webapp/resources/less/main.less
+++ b/src/main/webapp/resources/less/main.less
@@ -193,7 +193,7 @@ html, body {
         text-shadow: 0px 0px 5px #000;
         height: 147px;
         background-color: #7E57C2;
-        background-image: url('images/file-icon.png');
+        background-image: url('/images/file-icon.png');
         background-position: right top;
         background-repeat: no-repeat;
         background-size: 54% auto;
