--- a/src/main/webapp/resources/less/main.less
+++ b/src/main/webapp/resources/less/main.less
@@ -278,4 +278,19 @@ html, body {
             z-index: 4;
         }
     }
-} 
+}
+
+.btn-a {
+    padding: 0;
+    
+    & > a {
+        padding: 0 16px;
+        color: rgba(0, 0, 0, .87);
+        font-weight: normal;
+        text-decoration: none;
+        width: 100%;
+        height: 100%;
+        display: block;
+        box-sizing: border-box;
+    }
+}
