--- a/src/main/webapp/resources/less/main.less
+++ b/src/main/webapp/resources/less/main.less
@@ -197,6 +197,10 @@ html, body {
     width: 100%;
 }
 
+.form-full-width {
+    width: 100%;
+}
+
 .form-field {
     width: 100%;
 }
@@ -292,5 +296,26 @@ html, body {
         height: 100%;
         display: block;
         box-sizing: border-box;
+    }
+
+    & > form {
+        width: 100%;
+        height: 100%;
+
+        & > button {
+            padding: 0 16px;
+            background: rgba(0,0,0,0);
+            color: rgba(0, 0, 0, .87);
+            font-weight: normal;
+            text-decoration: none;
+            width: 100%;
+            height: 100%;
+            display: block;
+            box-sizing: border-box;
+            border: none;
+            text-align: left;
+            outline: none;
+            cursor: pointer;
+        }
     }
 }
