run backup for scheduler, add backup status, add backup error message

--- a/src/main/webapp/resources/less/main.less
+++ b/src/main/webapp/resources/less/main.less
@@ -347,3 +347,10 @@ html, body {
         transform: translateY(200px);
     }
 }
+
+tr.success {
+    background: #91d694;
+}
+tr.error {
+    background: #ff938c;
+}
